--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@angular/compiler": "^17.2.0",
     "@angular/core": "^17.2.0",
     "@angular/forms": "^17.2.0",
+    "@angular/material": "^17.3.9",
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/router": "^17.2.0",
+    "apollo": "^2.34.0",
     "autoprefixer": "^10.4.19",
+    "graphql": "^14.7.0",
     "postcss": "^8.4.38",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.4.3",
